--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,7 +1,7 @@
 @import './variable.scss';
 @import './mixins.scss';
 
-html, body, div, h1, h2, h3, h4, h5, h6, p, dl, dt, dd, ol, ul, li, fieldset, form, label, input, legend, table, caption, tbody, tfoot, thead, tr, th, td, textarea, article, aside, audio, canvas, figure, footer, header, mark, menu, nav, section, time, video { margin: 0; padding: 0; }
+html, body, div, h1, h2, h3, h4, h5, h6, p, dl, dt, dd, ol, ul, li, fieldset, form, input, legend, table, caption, tbody, tfoot, thead, tr, th, td, textarea, article, aside, audio, canvas, figure, footer, header, mark, menu, nav, section, time, video { margin: 0; padding: 0; }
 h1, h2, h3, h4, h5, h6 { font-size: 100%; font-weight: normal }
 article, aside, dialog, figure, footer, header, hgroup, nav, section, blockquote { display: block; }
 ul, ol { list-style: none; }
@@ -41,4 +41,25 @@ a:hover { text-decoration: underline; }
 
 ::-webkit-scrollbar-thumb:hover {
   background-color: rgba(#101F1C, 1);
+}
+//修改表头的背景颜色横向渐变色
+.el-table {
+  margin-top: 20px;
+  thead {
+    color: #606266;
+    font-weight: 500;
+    & th {
+      background-color: #f5f7fa !important;
+    }
+    & tr {
+      background-color: transparent;
+    }
+  }
+}
+/*  分页样式 */
+.paginWrap{
+  margin-top: 0px !important;
+  padding: 10px 6px !important;
+  border: 1px solid rgb(223, 230, 236);
+  border-top: 0px;
 }
