--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -63,3 +63,28 @@ a:hover { text-decoration: underline; }
   border: 1px solid rgb(223, 230, 236);
   border-top: 0px;
 }
+// 弹框样式
+.addCont /deep/.el-drawer__header{
+  padding: 15px 0 15px 15px;
+  font-size: 14px;
+  color: #606266;
+  margin-bottom: 0px;
+  border-bottom: 1px solid #f1f1f1;
+  position: relative;
+  z-index: 9;
+  box-shadow: 0px 0px 2px 0px rgba($color: #000000, $alpha: 0.1);
+}
+.drewWrap{
+  height:calc(100% - 60px);
+  overflow-y:auto;
+  background:#f2f2f2;
+}
+.drawer_but{
+  height: 60px;
+  text-align: right;
+  line-height: 60px;
+  border-top: solid 1px #f1f1f1;
+  padding-right: 20px;
+  position: relative;
+  box-shadow: 2px 2px 2px 2px rgba($color: #000000, $alpha: 0.1);
+}
