格式化代码

--- a/src/styles/variable.scss
+++ b/src/styles/variable.scss
@@ -43,12 +43,12 @@ $line-height-md: 20px;
 $line-height-lg: 22px;
 $line-height-xl: 30px;
 // 字体
-$base-font-family: -apple-system, BlinkMacSystemFont, 'Helvetica Neue',
-  Helvetica, Segoe UI, Arial, Roboto, 'PingFang SC', 'miui', 'Hiragino Sans GB',
+$base-font-family: -apple-system, blinkmacsystemfont, 'Helvetica Neue',
+  helvetica, segoe ui, arial, roboto, 'PingFang SC', 'miui', 'Hiragino Sans GB',
   'Microsoft Yahei', sans-serif;
-$price-integer-font-family: Avenir-Heavy, PingFang SC, Helvetica Neue, Arial,
+$price-integer-font-family: avenir-heavy, pingfang sc, helvetica neue, arial,
   sans-serif;
-  
+
 // Module style  投保流程
 $Viewdetails-color: #42b8ab;
 // 个人中心
