--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,22 +1,100 @@
 @import './variable.scss';
 @import './mixins.scss';
 
-html, body, div, h1, h2, h3, h4, h5, h6, p, dl, dt, dd, ol, ul, li, fieldset, form, input, legend, table, caption, tbody, tfoot, thead, tr, th, td, textarea, article, aside, audio, canvas, figure, footer, header, mark, menu, nav, section, time, video { margin: 0; padding: 0; }
-h1, h2, h3, h4, h5, h6 { font-size: 100%; font-weight: normal }
-article, aside, dialog, figure, footer, header, hgroup, nav, section, blockquote { display: block; }
-ul, ol { list-style: none; }
-img { border: 0 none; vertical-align: top; }
-blockquote, q { quotes: none; }
-blockquote:before, blockquote:after, q:before, q:after { content: none; }
+html,
+body,
+div,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+input,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+textarea,
+article,
+aside,
+audio,
+canvas,
+figure,
+footer,
+header,
+mark,
+menu,
+nav,
+section,
+time,
+video { margin: 0; padding: 0; }
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 { font-weight: normal; font-size: 100% }
+
+article,
+aside,
+dialog,
+figure,
+footer,
+header,
+hgroup,
+nav,
+section,
+blockquote { display: block; }
+
+ul,
+ol { list-style: none; }
+
+img { vertical-align: top; border: 0 none; }
+
+blockquote,
+q { quotes: none; }
+
+blockquote::before,
+blockquote::after,
+q::before,
+q::after { content: none; }
+
 table { border-collapse: collapse; border-spacing: 0; }
-strong, em, i { font-style: normal; font-weight: normal; }
+
+strong,
+em,
+i { font-weight: normal; font-style: normal; }
+
 ins { text-decoration: underline; }
+
 del { text-decoration: line-through; }
+
 mark { background: none; }
+
 input::-ms-clear { display: none !important; }
-body { font: 12px/1.5 \5FAE\8F6F\96C5\9ED1, \5B8B\4F53, "Hiragino Sans GB", STHeiti, "WenQuanYi Micro Hei", "Droid Sans Fallback", SimSun, sans-serif; background: #fff; }
-a { text-decoration: none; color: #333; }
+
+body { font: 12px/1.5 "\5FAE\8F6F\96C5\9ED1", "\5B8B\4F53", "Hiragino Sans GB", STHeiti, "WenQuanYi Micro Hei", "Droid Sans Fallback", SimSun, sans-serif; background: #fff; }
+
+a { color: #333; text-decoration: none; }
+
 a:hover { text-decoration: underline; }
+
 ::-webkit-scrollbar {
   width: 6px;
   height: 6px;
@@ -24,67 +102,69 @@ a:hover { text-decoration: underline; }
 
 ::-webkit-scrollbar-track {
   width: 6px;
-  background: rgba(#101F1C, 0.1);
-  -webkit-border-radius: 2em;
-  -moz-border-radius: 2em;
+  background: rgba(#101f1c, 0.1);
   border-radius: 2em;
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: rgba(#101F1C, 0.5);
-  background-clip: padding-box;
   min-height: 28px;
-  -webkit-border-radius: 2em;
-  -moz-border-radius: 2em;
+  background-color: rgba(#101f1c, 0.5);
+  background-clip: padding-box;
   border-radius: 2em;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background-color: rgba(#101F1C, 1);
+  background-color: rgba(#101f1c, 1);
 }
 //修改表头的背景颜色横向渐变色
 .el-table {
   margin-top: 20px;
+
   thead {
     color: #606266;
     font-weight: 500;
+
     & th {
       background-color: #f5f7fa !important;
     }
+
     & tr {
       background-color: transparent;
     }
   }
 }
+
 /*  分页样式 */
-.paginWrap{
-  margin-top: 0px !important;
+.paginWrap {
+  margin-top: 0 !important;
   padding: 10px 6px !important;
-  border: 1px solid rgb(223, 230, 236);
-  border-top: 0px;
+  border: 1px solid #dfe6ec;
+  border-top: 0;
 }
 // 弹框样式
-.addCont /deep/.el-drawer__header{
-  padding: 15px 0 15px 15px;
-  font-size: 14px;
-  color: #606266;
-  margin-bottom: 0px;
-  border-bottom: 1px solid #f1f1f1;
+.addCont /deep/.el-drawer__header {
   position: relative;
   z-index: 9;
-  box-shadow: 0px 0px 2px 0px rgba($color: #000000, $alpha: 0.1);
+  margin-bottom: 0;
+  padding: 15px 0 15px 15px;
+  color: #606266;
+  font-size: 14px;
+  border-bottom: 1px solid #f1f1f1;
+  box-shadow: 0 0 2px 0 rgba($color: #000, $alpha: 10%);
 }
-.drewWrap{
-  height:calc(100% - 60px);
-  overflow-y:auto;
-  background:#f2f2f2;
+
+.drewWrap {
+  height: calc(100% - 60px);
+  overflow-y: auto;
+  background: #f2f2f2;
 }
-.drawer_but{
-  height: 60px;
-  text-align: right;
-  line-height: 60px;
-  border-top: solid 1px #f1f1f1;
-  padding-right: 20px;
+
+.drawer_but {
   position: relative;
-  box-shadow: 2px 2px 2px 2px rgba($color: #000000, $alpha: 0.1);
+  height: 60px;
+  padding-right: 20px;
+  line-height: 60px;
+  text-align: right;
+  border-top: solid 1px #f1f1f1;
+  box-shadow: 2px 2px 2px 2px rgba($color: #000, $alpha: 10%);
 }
