--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -149,19 +149,19 @@ a:hover {
 
 ::-webkit-scrollbar-track {
   width: 6px;
-  background: rgba(#101f1c, 0.1);
+  background: rgba(16, 31, 28, 0.1);
   border-radius: 2em;
 }
 
 ::-webkit-scrollbar-thumb {
   min-height: 28px;
-  background-color: rgba(#101f1c, 0.5);
+  background-color: rgba(16, 31, 28, 0.5);
   background-clip: padding-box;
   border-radius: 2em;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background-color: rgba(#101f1c, 1);
+  background-color: #101f1c;
 }
 //修改表头的背景颜色横向渐变色
 .el-table {
@@ -197,7 +197,7 @@ a:hover {
   color: #606266;
   font-size: 14px;
   border-bottom: 1px solid #f1f1f1;
-  box-shadow: 0 0 2px 0 rgba($color: #000, $alpha: 10%);
+  box-shadow: 0 0 2px 0 rgba(0, 0, 0, 0.1);
 }
 
 .drewWrap {
@@ -213,5 +213,5 @@ a:hover {
   line-height: 60px;
   text-align: right;
   border-top: solid 1px #f1f1f1;
-  box-shadow: 2px 2px 2px 2px rgba($color: #000, $alpha: 10%);
+  box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.1);
 }
