--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,22 +1,148 @@
 @import './variable.scss';
 @import './mixins.scss';
 
-html, body, div, h1, h2, h3, h4, h5, h6, p, dl, dt, dd, ol, ul, li, fieldset, form, label, input, legend, table, caption, tbody, tfoot, thead, tr, th, td, textarea, article, aside, audio, canvas, figure, footer, header, mark, menu, nav, section, time, video { margin: 0; padding: 0; }
-h1, h2, h3, h4, h5, h6 { font-size: 100%; font-weight: normal }
-article, aside, dialog, figure, footer, header, hgroup, nav, section, blockquote { display: block; }
-ul, ol { list-style: none; }
-img { border: 0 none; vertical-align: top; }
-blockquote, q { quotes: none; }
-blockquote:before, blockquote:after, q:before, q:after { content: none; }
-table { border-collapse: collapse; border-spacing: 0; }
-strong, em, i { font-style: normal; font-weight: normal; }
-ins { text-decoration: underline; }
-del { text-decoration: line-through; }
-mark { background: none; }
-input::-ms-clear { display: none !important; }
-body { font: 12px/1.5 \5FAE\8F6F\96C5\9ED1, \5B8B\4F53, "Hiragino Sans GB", STHeiti, "WenQuanYi Micro Hei", "Droid Sans Fallback", SimSun, sans-serif; background: #fff; }
-a { text-decoration: none; color: #333; }
-a:hover { text-decoration: underline; }
+html,
+body,
+div,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+input,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+textarea,
+article,
+aside,
+audio,
+canvas,
+figure,
+footer,
+header,
+mark,
+menu,
+nav,
+section,
+time,
+video {
+  margin: 0;
+  padding: 0;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-weight: normal;
+  font-size: 100%;
+}
+
+article,
+aside,
+dialog,
+figure,
+footer,
+header,
+hgroup,
+nav,
+section,
+blockquote {
+  display: block;
+}
+
+ul,
+ol {
+  list-style: none;
+}
+
+img {
+  vertical-align: top;
+  border: 0 none;
+}
+
+blockquote,
+q {
+  quotes: none;
+}
+
+blockquote::before,
+blockquote::after,
+q::before,
+q::after {
+  content: none;
+}
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+strong,
+em,
+i {
+  font-weight: normal;
+  font-style: normal;
+}
+
+ins {
+  text-decoration: underline;
+}
+
+del {
+  text-decoration: line-through;
+}
+
+mark {
+  background: none;
+}
+
+input::-ms-clear {
+  display: none !important;
+}
+
+body {
+  font:
+    12px/1.5 \5FAE\8F6F\96C5\9ED1,
+    \5B8B\4F53,
+    'Hiragino Sans GB',
+    STHeiti,
+    'WenQuanYi Micro Hei',
+    'Droid Sans Fallback',
+    SimSun,
+    sans-serif;
+  background: #fff;
+}
+
+a {
+  color: #333;
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
 ::-webkit-scrollbar {
   width: 6px;
   height: 6px;
@@ -24,21 +150,21 @@ a:hover { text-decoration: underline; }
 
 ::-webkit-scrollbar-track {
   width: 6px;
-  background: rgba(#101F1C, 0.1);
+  background: rgba(#101f1c, 0.1);
   -webkit-border-radius: 2em;
   -moz-border-radius: 2em;
   border-radius: 2em;
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: rgba(#101F1C, 0.5);
-  background-clip: padding-box;
   min-height: 28px;
+  background-color: rgba(#101f1c, 0.5);
+  background-clip: padding-box;
   -webkit-border-radius: 2em;
   -moz-border-radius: 2em;
   border-radius: 2em;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background-color: rgba(#101F1C, 1);
+  background-color: rgba(#101f1c, 1);
 }
